# phone-number-lookup

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Get Phone Number Information using Python-v1.1.py  Get Phone Number Information using Python.py  LICENSE  README.md  evidence.csv  main.py  pyproject.toml  report.json  requirements.txt  run_gui_direct.py  temp_import_gui.py
.github/workflows/: ci.yml
phoneint/: __init__.py  cache.py  cli.py  config.py  gui.py  gui_owner.py  logging_config.py  py.typed
phoneint/core/: __init__.py  enrich.py  parser.py
phoneint/data/: __init__.py  scam_list.json  signal_overrides.json
phoneint/io/: __init__.py  report.py  report_owner.py
phoneint/net/: __init__.py  http.py
phoneint/owner/: __init__.py  classify.py  interface.py  signals.py  truecaller_adapter.py
phoneint/reputation/: __init__.py  adapter.py  duckduckgo.py  google.py  private_service_template.py  public.py  score.py  signals.py
reports/: report.csv  report.json
stubs/PySide6/: QtWidgets.pyi  __init__.pyi
tests/: test_cache.py  test_enrich.py  test_owner.py  test_parser.py  test_public.py  test_score.py  test_signals.py
